apps/development/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: keycloak-deployment
  namespace: development
spec: 
  selector: 
    matchLabels: 
      app: keycloak
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template: 
    metadata: 
      labels: 
        app: keycloak
    spec: 
      containers: 
      - name: keycloak
        image: quay.io/keycloak/keycloak:8.0.2
        imagePullPolicy: Always
        ports: 
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
          initialDelaySeconds: 120
        volumeMounts:
        - name: keycloak-persistent-volume
          mountPath: /opt/keycloak/data
      volumes:
      - name: keycloak-persistent-volume
        persistentVolumeClaim:
          claimName: keycloak-persistent-volume-claim
