apps/development/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: keycloak-ingress-2
  namespace: development
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  ingressClassName: nginx
  rules: 
  - host: identitty.kub3.dev
    http: 
      paths: 
      - backend: 
          service: 
            name: keycloak
            port: 
              number: 53582
        path: /keycloak/(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - identitty.kub3.dev
    secretName: le-identitty-kub3-dev-cert-tls
